--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -1,6 +1,6 @@
 @import "/src/assets/global-styles/variable";
 
-.common-button {
+.common-button, .link-button {
   padding: 12px;
   margin: 10px;
   border-radius: 16px 8px;
@@ -18,3 +18,5 @@
     text-decoration: underline;
   }
 }
+
+
