--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -4,36 +4,21 @@
 .button {
 	@include transition-main();
 
-	// &_common {
-	// 	padding: 10px;
-	// 	margin: 10px;
-	// 	border-radius: 16px 8px;
-	// 	border: 1px solid rgba(0, 0, 0, 0.9);
-	// 	color: $text-color-main;
-	// 	background-color: $page-bg-color-main;
-
-	// 	&:active {
-	// 		border-width: 2px;
-	// 		padding: 11px;
-	// 	}
-
-	// 	&:hover {
-	// 		box-shadow: 2px 4px 4px 0px rgba(93, 149, 238, 0.2);
-	// 		text-decoration: underline;
-	// 	}
-	// }
-
-	&:active {
-
-	}
-
-	&:hover {
-		background-color: $highlight-additional;
+	&_common {
+		border-radius: 50%;
 	}
 
 	&_nav {
 		@include bold-text(20px);
 		display: block;
 		text-align: center;
+	}
+
+	&:active {
+		border: 1px solid #aaa;
+	}
+
+	&:hover {
+		background-color: $highlight-additional;
 	}
 }
