--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,4 +1,8 @@
 @import "./mixins.scss";
+@import "./rwd-1400";
+@import "./rwd-1200";
+@import "./rwd-1048";
+@import "./rwd-760";
 
 h1 {
 	@include headings(70px);
