--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -34,6 +34,14 @@
 	line-height: 165.4%;
 }
 
+/*Images*/
+@mixin backgr-img($url) {
+	background-image: url($url);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
 /*Flex box*/
 @mixin flex-row() {
 	display: flex;
