--- a/src/assets/styles/myReset.css
+++ b/src/assets/styles/myReset.css
@@ -83,6 +83,7 @@ section,
 summary,
 time,
 mark,
+button,
 audio,
 video {
   margin: 0;
@@ -139,6 +140,12 @@ table {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+button {
+	border-color: #000;
+	border-width: 1px;
+	border-style: solid;
 }
 
 *,
