--- a/client/src/pages/home/common.blocks/hero/hero.scss
+++ b/client/src/pages/home/common.blocks/hero/hero.scss
@@ -21,6 +21,8 @@
 	&__btn {
 		width: 220px;
 		margin-top: 24px;
+		padding-left: 39px;
+		padding-right: 39px;
 		background-color: $highlight-additional;
 	}
 
