--- a/client/src/assets/styles/_mixins.scss
+++ b/client/src/assets/styles/_mixins.scss
@@ -28,7 +28,7 @@
 
 @mixin common-text() {
 	color: $text-color-main;
-	font-family: $Open-Sanss;
+	font-family: $Open-Sans;
 	font-size: 18px;
 	font-style: normal;
 	font-weight: 400;
@@ -42,6 +42,26 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	max-width: 100%;
+}
+
+/*Pseudo element*/
+@mixin pseudo-elem() {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@mixin pseudo-elem-img($url) {
+  @include pseudo-elem();
+	width: 100px;
+	height: 100px;
+  background-image: url($url);
+  background-size: cover;
+	background-repeat: no-repeat;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 /*Flex box*/
