--- a/client/src/components/buttons/buttons.scss
+++ b/client/src/components/buttons/buttons.scss
@@ -16,12 +16,13 @@
 	}
 
 	&_link {
-		padding: 28px 47px;
+		@include bold-text(20px);
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		text-transform: capitalize;
 		border-radius: 16px;
+		padding: 28px 47px;
 
 		&-arrow {
 			@include backgr-img("/src/assets/images/Button-Link-Arrow.svg");
