--- a/client/src/assets/styles/myReset.css
+++ b/client/src/assets/styles/myReset.css
@@ -146,6 +146,8 @@ button {
 	border-color: #000;
 	border-width: 1px;
 	border-style: solid;
+	background-color: transparent;
+	cursor: pointer;
 }
 
 *,
