--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -13,7 +13,12 @@ $highlight-main: #274C5B;
 $highlight-additional: #EFD372;
 $text-color-main: #525C60;
 $text-color-highlight: #7EB693;
+$border-color-main: #D4D4D4;
 
 /*Transition*/
 $trans-default-time: 1.2s;
+$trans-button-time: 0.2s;
+
+/*Paddings*/
+$page-bg-side-padding: 260px;
 
