--- a/client/src/assets/styles/_mixins.scss
+++ b/client/src/assets/styles/_mixins.scss
@@ -10,9 +10,9 @@
 	line-height: normal;
 }
 
-@mixin bold-text($font-size) {
+@mixin bold-text($font-size, $font-weight: 700) {
 	@include headings($font-size);
-	font-weight: 700;
+	font-weight: $font-weight;
 }
 
 @mixin highlight-text() {
@@ -35,13 +35,20 @@
 }
 
 /*Images*/
+@mixin common-img() {
+	width: 100%;
+	height: 100%;
+	max-width: 100%;
+	max-height: 100%;
+}
+
 @mixin backgr-img($url) {
 	background-image: url($url);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	max-width: 100%;
-	max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /*Pseudo element*/
