finish product card

--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -17,9 +17,13 @@ $border-color-main: #D4D4D4;
 
 /*Transition*/
 $trans-default-time: 1.2s;
+$trans-card-time: 0.5s;
 $trans-button-time: 0.2s;
 
 /*Paddings*/
 $page-bg-side-padding: 260px;
 $product-card-padding: 30px;
+
+/*Border radius*/
+$card-border-rad: 30px;
 
