--- a/client/src/pages/home/common.blocks/testimonials/testimonials.scss
+++ b/client/src/pages/home/common.blocks/testimonials/testimonials.scss
@@ -1,3 +1,4 @@
+@import "/src/assets/styles/variables";
 @import "/src/assets/styles/mixins";
 @import "/src/assets/styles/functions";
 
@@ -6,26 +7,28 @@
   padding: 164px 0;
   background-color: #FCFCFC;
   text-align: center;
+  overflow: hidden;
 
   &_decore-right {
     @include backgr-img("/src/assets/images/Testimonials-Background.png");
-    background-position: initial;
-    width: 15%;
+    background-position: (0 23px);
+    width: 20%;
     height: 100%;
     position: absolute;
     top: 0;
     right: 0;
+    transform: scale(1.5)
   }
 
   &_decore-left {
     @extend .testimonials_decore-right;
     right: initial;
     left: 0;
-    transform: rotate(180deg);
+    transform: rotate(180deg) scale(1.5);
   }
 
   &__content {
-    width: 70%;
+    width: 60%;
     margin: 0 auto;
   }
 
@@ -46,13 +49,30 @@
 
   &__benefit {
     @include flex-column();
+    position: relative;
     border-radius: 50%;
-    background-color: #F1F1F1;
+    border: 4px solid #7EB693;
     width: 211px;
     height: 211px;
 
+    &-wrap {
+      position: relative;
+      z-index: 1;
+    }
+    
     &-description {
       @include common-text(600);
+    }
+
+    &_decore {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
+      height: 90%;
+      background-color: #F1F1F1;
+      border-radius: 50%;
     }
   }
 }
