--- a/client/src/pages/home/common.blocks/products/products.scss
+++ b/client/src/pages/home/common.blocks/products/products.scss
@@ -16,6 +16,8 @@
 
   &__wrap {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     column-gap: 20px;
     row-gap: 20px;
   }
