--- a/client/src/components/product-card/modalProductCard.scss
+++ b/client/src/components/product-card/modalProductCard.scss
@@ -8,13 +8,14 @@
   left: 0;
   z-index: 2;
   width: 100%;
-  height: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 
   &__container {
     position: relative;
     background: #FFFAFA;
     padding: 40px px2vw($page-bg-side-padding);
-    height: 80%;
   }
   
   &__content {
@@ -116,6 +117,7 @@
     border: 2px solid $highlight-main;
     border-radius: $btn-border-rad;
     text-align: center;
+    padding-left: 12px;
   }
 
   &__btn-to-shop {
@@ -136,7 +138,7 @@
     width: px2vw(1200px);
     margin: 0 auto;
     column-gap: 20px;
-    row-gap: 27px;
+    row-gap: 20px;
   }
 
   &__buttons-wrap {
@@ -145,7 +147,7 @@
 
   &__btn-close {
     position: absolute;
-    top: 10%;
+    top: 6vh;
     right: 6%;
     color: $page-bg-color-main;
     background-color: $highlight-main;
@@ -158,7 +160,7 @@
   &__btn {
     @include common-text(700);
     font-size: 25px;
-    border: none;
+    border-color: transparent;
     padding: 23px 56px;
     color: $page-bg-color-main;
     background-color: $highlight-main;
@@ -166,6 +168,12 @@
 
     &:first-child {
       margin-right: 20px;
+    }
+
+    &_active {
+      background-color: #EFF6F1;
+      color: $highlight-main;
+      border: 1px solid #000;
     }
   }
 
@@ -179,7 +187,7 @@
     width: 100%;
     background-color: $border-color-main;
     opacity: 82%;
-    height: 10%;
+    height: inherit;
   }
 
   &_bottom-decore {
