start creating cart

--- a/client/src/assets/styles/_mixins.scss
+++ b/client/src/assets/styles/_mixins.scss
@@ -88,5 +88,5 @@
 
 /*Transition*/
 @mixin transition-main() {
-	transition: all $trans-default-time;
+	transition: all $trans-default-time linear;
 }
