--- a/client/src/components/product-card/modalProductCard.scss
+++ b/client/src/components/product-card/modalProductCard.scss
@@ -120,7 +120,13 @@
     padding-left: 12px;
   }
 
+  &__add-to-cart {
+    position: relative;
+  }
+
   &__btn-to-shop {
+    position: relative;
+    z-index: 1;
     background-color: $highlight-main;
     color: $page-bg-color-main;
     width: 213px;
@@ -130,6 +136,39 @@
 
     &:hover {
       background-color: $highlight-additional;
+    }
+
+    &_cover {
+      display: none;
+      z-index: 2;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $border-color-main;
+      border-radius: $btn-border-rad;
+      opacity: 0.7;
+    }
+  }
+
+  &__message {
+    @include bold-text(20px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 2px solid $text-color-highlight;
+    border-radius: $btn-border-rad;
+    padding: 5px;
+    color: $text-color-highlight;
+    letter-spacing: 0.5px;
+    text-align: center;
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
+
+    &_active {
+      top: 105%;
+      opacity: 1;
     }
   }
 
