--- a/client/src/main-layout/common.blocks/header/cartNav/cart.scss
+++ b/client/src/main-layout/common.blocks/header/cartNav/cart.scss
@@ -1,7 +1,7 @@
 @import "/src/assets/styles/mixins.scss";
 @import "/src/assets/styles/functions";
 
-.cart {
+.cartNav {
 	@include flex-row();
 	width: 159px;
 	height: 66px;
